--- a/constrained_spans.tex
+++ b/constrained_spans.tex
@@ -528,7 +528,7 @@ In this section we recall some basic facts we will need in the course of our pro
 
 \subsubsection*{Isofibrations}
 
-We will need some results about isofibrations, sometimes called categorical fibrations. These are standard, and proofs can be found on Kerodon.
+We will need some results about isofibrations, sometimes called categorical fibrations. These are standard, and proofs can be found in \cite{kerodon}.
 
 \begin{proposition}
   \label{prop:characterization_of_isofibrations}
