--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,9 @@
 \usepackage{mystyle}
 \usepackage{subfiles}
 
+\let\oldsection\section
+\renewcommand\section{\clearpage\oldsection}
+
 %bibliography location
 \addbibresource{sources.bib}
 
@@ -18,7 +21,7 @@
   {\centering
     {\fontsize{30}{30} \bfseries Cocartesian Fibrations, Categories of Spans, and Transfer Theories}
     \vspace{1.3cm} \\
-    {\huge \textit{Angus Rush}\\}
+    {\huge \textit{Angus Hadrian Rush}\\}
     \vspace{0.8cm}
     {\LARGE \date\par}
     \vspace{4cm}
@@ -26,12 +29,24 @@
     \vspace{0.4cm}
     {\Large 
       Advisor: Prof.\ Dr.\ Tobias Dyckerhoff\\ \vspace{0.3cm}
-    Second Referee: Jun.-Prof.\ Julian Holstein }\\
+    Second Referee: Jun.-Prof.\ Dr.\ Julian Holstein }\\
     \vspace{2cm}
     {\LARGE Universität Hamburg\\
     Department of Mathematics\\}
 
   }	
+  \newpage \thispagestyle{empty}
+  {\centering \bfseries \Large Eigenständigkeitserklärug\\~\\}
+  \noindent Die vorliegende Arbeit habe ich selbständig verfasst und keine anderen als die angegebenen Hilfsmittel - insbesondere keine im Quellenverzeichnis nicht benannten Internet-Quellen - benutzt. Die Arbeit habe ich vorher nicht in einem anderen Prüfungsverfahren eingereicht. Die eingereichte schriftliche Fassung entspricht genau der auf dem elektronischen Speichermedium.\\~\\~\\
+  \parbox{4cm}{\centering Hamburg, 21.09.2020 \hrule
+  \strut \centering\footnotesize Ort, Datum} \hfill\parbox{4cm}{\hrule
+  \strut \centering\footnotesize Unterschrift}
+  \vfill
+  \noindent Hiermit stimme ich zu, meine Abschlussarbeit in der Bibliothek des Fachbereichs Mathematik, Universität Hamburg, zu veröffentlichen \\~\\~\\
+  \parbox{4cm}{\centering Hamburg, 21.09.2020 \hrule
+  \strut \centering\footnotesize Ort, Datum} \hfill\parbox{4cm}{\hrule
+  \strut \centering\footnotesize Unterschrift}
+  \vfill 
 \end{titlepage}
 
 \tableofcontents
