--- a/segal_spans.tex
+++ b/segal_spans.tex
@@ -209,7 +209,7 @@ We provide here a partial proof of the following result because we will need to 
 \subsection{Marked bisimplicial sets}
 \label{ssc:marked_bisimplicial_sets}
 
-In this section, we define the basic theory of marked bisimplicial sets. In the following, one should keep in mind that the case in we are mostly interested is when our bisimplicial spaces are complete spaces, and thus that only first (horizontal) simplicial direction should be thought of as categorical. For this reason, only the first simplicial direction will carry a marking.
+In this section, we define the basic theory of marked bisimplicial sets. In the following, one should keep in mind that the case in which we are mostly interested is when our bisimplicial spaces are complete spaces, and thus that only first (horizontal) simplicial direction should be thought of as categorical. For this reason, only the first simplicial direction will carry a marking.
 
 \begin{definition}
   A \defn{marked bisimplicial set} $(X, \mathcal{E})$ is a bisimplicial set $X$ together with a distinguished subset $\mathcal{E} \subseteq X_{10}$ containing all degenerate edges, i.e.\ all edges in the image of $s_{0}\colon X_{00} \to X_{10}$. Equivalently, a marked bisimplicial set is bisimplicial set $X$ together with a marking $\mathcal{E}$ on the simplicial set $X / \Delta^{0}$.
