--- a/sources.bib
+++ b/sources.bib
@@ -1,5 +1,12 @@
 % Encoding: UTF-8
 
+@misc{kerodon,
+  author       = {Jacob Lurie},
+  title        = {Kerodon},
+  howpublished = {\url{https://kerodon.net}},
+  year         = {2020},
+}
+
 @misc{lurie_tqft_classification,
   Author = {Jacob Lurie},
   Title  = {On the Classification of Topological Field Theories},
